--- a/src/app/equipment/equipment.component.html
+++ b/src/app/equipment/equipment.component.html
@@ -1,7 +1,23 @@
 <h3>Equipment</h3>
-<ul>
-  <li>Habitat dome</li>
-  <li>Drones</li>
-  <li>Food containers</li>
-  <li>Oxygen tanks</li>
+<ul *ngFor="let member of equipments">
+  <li>
+    <span *ngIf="memberBeingEdited !== member; else elseBlock">
+      <span (click)="edit(member)" class="editable-text">{{
+        member.name
+      }}</span>
+      <button (click)="remove(member)">remove</button>
+    </span>
+    <ng-template #elseBlock>
+      <!-- edit state of member -->
+      <input
+        #updatedName
+        (keyup.enter)="save(updatedName.value, member)"
+        value="{{ member.name }}"
+      />
+      <button (click)="save(updatedName.value, member)">save</button>
+    </ng-template>
+  </li>
 </ul>
+
+<input #name type="text" />
+<button (click)="add(name.value)">Add</button>
