--- a/src/app/experiments/experiments.component.html
+++ b/src/app/experiments/experiments.component.html
@@ -1,6 +1,24 @@
 <h3>Experiments</h3>
-<ul>
-  <li>Mars soil sample</li>
-  <li>Plant growth in habitat</li>
-  <li>Human bone density</li>
+<ul *ngFor="let member of experiments">
+  <li>
+    <span *ngIf="memberBeingEdited !== member; else elseBlock">
+      <span (click)="edit(member)" class="editable-text">{{
+        member.name
+      }}</span>
+      <button (click)="remove(member)">remove</button>
+    </span>
+    <ng-template #elseBlock>
+      <!-- edit state of member -->
+      <input
+        #updatedName
+        (keyup.enter)="save(updatedName.value, member)"
+        value="{{ member.name }}"
+      />
+      <button (click)="save(updatedName.value, member)">save</button>
+    </ng-template>
+  </li>
 </ul>
+
+<input #name type="text" />
+<button (click)="add(name.value)">Add</button>
+
