--- a/src/app/equipment/equipment.component.css
+++ b/src/app/equipment/equipment.component.css
@@ -13,6 +13,11 @@ h3 {
 }
 
 /* Add an 'active' class to style the background of the 'Add to Cargo Hold' buttons. */
-
-
+.active {
+  background-color: yellow
+}
+.nearMaxMass {
+  font-weight: bold;
+  color: red;
+}
 /* Add the 'nearMaxMass' class style here: */
