--- a/src/app/equipment/equipment.component.html
+++ b/src/app/equipment/equipment.component.html
@@ -2,10 +2,11 @@
     <h3>Equipment</h3>
     <ol>
         <li *ngFor="let item of equipmentItems">
-            <!-- "Add to Cargo Hold" button goes here. -->
+          <button (click)="addItem(item)" [disabled]="isItemMassOver(item)" [class.active]="!isItemMassOver(item)"> Add to Cargo Hold</button>
             {{item.name}}, {{item.mass}} kg
         </li>
     </ol>
+          <button (click)="emptyHold()"> Empty Hold</button>
 </div>
 
 <hr>
@@ -16,7 +17,7 @@
         <li *ngFor="let equipment of cargoHold">{{equipment.name}}</li>
     </ol>
     <p>Mass in Hold: {{cargoMass}} kg</p>
-    <p>Mass Budget Remaining: {{<!-- Calculate mass remaining here. -->}} kg</p>
+    <p [class.nearMaxMass]="cargoMass >maximumAllowedMass - 200">Mass Budget Remaining: {{maximumAllowedMass -cargoMass }} kg</p>
     <!-- Add the "Empty Hold" button here. -->
 </div>
 
