--- a/src/app/crew/crew.component.html
+++ b/src/app/crew/crew.component.html
@@ -12,4 +12,5 @@
     </ol>
     <!-- Add an img tag here to display astronaut photos. -->
     <img [src]="selectedCrew.photo" *ngIf="selectedCrew" />
+    <p *ngIf="selectedCrew" style="text-align: center">Lucky Value: {{selectedCrew.luckyValue}}</p>
 </div>
