--- a/src/app/experiments/experiments.component.html
+++ b/src/app/experiments/experiments.component.html
@@ -1,7 +1,23 @@
+
 <div class="displayBox">
     <h3>Possible Experiments</h3>
-    <ul>
-      <li *ngFor="let experiment of experiments">{{experiment}}</li>
-    </ul>
+    <ol>
+        <li *ngFor="let item of experiments">
+          <button (click)="addItem(item)"> Add </button>
+            {{item}} 
+        </li>
+    </ol>
 </div>
+
 <hr>
+
+<div class = "displayBox">
+    <h3>Experiment Hold: {{experimentHold.length}}</h3>
+    <ol>
+        <li *ngFor="let equipment of experimentHold">{{equipment}}
+        <button (click)="removeItem(equipment)">Remove</button>
+        </li>
+    </ol>    <button (click)="emptyHold()"> Empty Hold</button>
+</div>
+
+
